--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,7 @@ list(APPEND BT_SOURCE
     src/controls/fallback_star_node.cpp
 
     src/loggers/bt_cout_logger.cpp
-#    src/loggers/bt_file_logger.cpp
+    src/loggers/bt_file_logger.cpp
     src/loggers/bt_minitrace_logger.cpp
 
     3rdparty/tinyXML2/tinyxml2.cpp
